packages/ui/collapse/src/index.less
@osui-collapse-class-prefix: osui-collapse;

.@{osui-collapse-class-prefix} {
    &:not(.@{ant-prefix}-collapse-ghost) {
        &.@{ant-prefix}-collapse {
            background: var(--collapse-bg);
            border: var(--collapse-border);
        }

        &.@{ant-prefix}-collapse > .@{ant-prefix}-collapse-item {
            background: var(--collapse-bg);
            border-bottom: var(--collapse-border);
        }

        .@{ant-prefix}-collapse-content {
            border-top: var(--collapse-border);
        }
    }

    .@{ant-prefix}-collapse-item {
        .@{ant-prefix}-collapse-header {
            display: flex;
            align-items: center;
            height: var(--collapse-header-height);
            margin-top: var(--collpase-item-header-margin-bottom);
            padding-top: 0;
            padding-bottom: 0;
            color: var(--theme-text-color);
            font-weight: var(--collapse-header-font-weight);
            font-size: var(--collapse-header-font-size);
            line-height: var(--collapse-header-height);
            background: var(--collapse-header-bg);

            .icon-wrapper {
                top: auto;
                width: 16px;
                height: 16px;
                color: var(--collapse-expand-icon-color);
                line-height: 0;
                background: var(--collapse-expand-icon-bg);
                border-radius: 50%;
            }
        }
    }

    .@{ant-prefix}-collapse-item.@{ant-prefix}-collapse-item-disabled {
        .@{ant-prefix}-collapse-header {
            background-color: var(--collapse-header-bg);
        }

        .@{ant-prefix}-collapse-header,
        .@{ant-prefix}-collapse-arrow {
            color: var(--collapse-disabled-color);
        }
    }

    .@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-content > .@{ant-prefix}-collapse-content-box {
        .content-padding(40px);
    }
}

@arrow-gap: 28px;

.content-padding(@content-padding-left, @gap:0) {
    padding-top: var(--collapse-content-box-padding-top);
    padding-bottom: var(--collapse-content-box-padding-bottom);
    padding-left: calc(~'@{content-padding-left} + @{gap}');
}

// 对层级的控制
.nest(@level, @content-padding) {
    .@{osui-collapse-class-prefix}-level-@{level} {
        .@{ant-prefix}-collapse:not(.@{ant-prefix}-collapse-ghost) {
            border-top: 0;
            border-right: 0;
            border-left: 0;

            > .@{ant-prefix}-collapse-item:last-child {
                border-bottom: 0;
            }
        }

        &.@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-content > .@{ant-prefix}-collapse-content-box {
            padding: 0 !important;
        }

        .@{osui-collapse-class-prefix}-level-child {
            .@{ant-prefix}-collapse-item > .@{ant-prefix}-collapse-content > .@{ant-prefix}-collapse-content-box {
                .content-padding(@content-padding, @arrow-gap);
            }

            .@{ant-prefix}-collapse-header {
                padding-left: @content-padding !important;
            }
        }
    }
}

.nest(1, 40px);
.nest(2, 68px);

